# job-portal-backend-

./: .env.example  .gitignore  DEVELOPER_GUIDE.md  Dockerfile  ENHANCEMENT_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  README_NEW.md  db.sqlite3  docker-compose.yml  example_tasks.py  gunicorn_config.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  requirements_production.txt
.github/workflows/: tests.yml
accounts/: admin.py  models-DESKTOP-TFKECDS.py  models.py  serializers-DESKTOP-TFKECDS.py  serializers.py  views-DESKTOP-TFKECDS.py  views.py
accounts/migrations/: 0001_initial.py
applications/: models-DESKTOP-TFKECDS.py  models.py  serializers.py  urls.py  views-DESKTOP-TFKECDS.py
applications/migrations/: 0001_initial.py
config/: celery.py  exceptions.py  permissions.py  settings-DESKTOP-TFKECDS.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  urls.py  utils.py  views.py
interviews/: models-DESKTOP-TFKECDS.py  models.py  serializers.py  urls.py  views.py
interviews/migrations/: 0001_initial.py
jobs/: models-DESKTOP-TFKECDS.py  models.py  serializers-DESKTOP-TFKECDS.py  serializers.py  urls.py  views.py
jobs/migrations/: 0001_initial.py
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  jobs_list.html  login.html  register.html
